# typed-emitter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  codecov.yml
benches/: emitter_bench.rs
src/: lib.rs
tests/: emitter-async-std.rs  emitter-smol.rs  emitter-tokio.rs  emitter.rs
