[package]
name = "typed-emitter"
version = "0.1.1"
edition = "2021"
authors = [ "Spencer Najib", "Dylan Kerler" ]
keywords = [
  "event-emitter",
  "tokio",
  "async-rust",
  "futures",
  "typed-emitter"
]
license = "MIT"
description = "Typed Async event emitter"
repository = "https://github.com/spencerjibz/typed-emitter"
homepage = "https://github.com/spencerjibz/typed-emitter"
categories = [ "asynchronous", "web-programming" ]
readme = "./README.md"

[dependencies]
futures = "0.3.31"

  [dependencies.uuid]
  version = "1.11.0"
  features = [ "v4" ]

[dev-dependencies]
smol-macros = "0.1.1"
lazy_static = "1.5.0"
macro_rules_attribute = "0.2.0"

  [dev-dependencies.async-std]
  version = "1.12.0"
  features = [ "alloc", "attributes" ]

  [dev-dependencies.tokio]
  version = "1.43.0"
  default-features = false
  features = [ "rt", "macros", "rt-multi-thread" ]
